<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
            android:layout_margin="0dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/Buttons"
        android:layout_margin="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp" android:layout_gravity="top">

<!--            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/edit_exampleH"
                android:textAppearance="?android:attr/textAppearanceMedium" />
-->
            <com.clock.ClockViewer
                android:id="@+id/clockViewer1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />
        <ScrollView
            android:id="@+id/Scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="0dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/eventTextLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/list_selector_background"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_textH"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/eventText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_defaultText" />
                </LinearLayout>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/dateTypeLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@android:drawable/list_selector_background"
                    android:focusable="true"
                    android:gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_dateTypeH"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/dateType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/list_selector_background"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_dateH"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="112" />
                </LinearLayout>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/picLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/list_selector_background"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_ruler_picH"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/picText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />

                <LinearLayout
                    android:id="@+id/picBackLayuot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/list_selector_background"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_ruler_picH"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/picBackText"
                        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_dark" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Buttons"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/yes" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />
    </LinearLayout>

</RelativeLayout>